force-app/main/default/objects/Loan_Application__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Represent the Primary Applicant for Loan Application</description>
    <label>Borrower</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>