force-app/main/default/objects/Loan_Application__c/fields/Loan_to_Value_LTV__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Value_LTV__c</fullName>
    <description>Amount__c  /  Property_Value__c</description>
    <formula>( Amount__c  /  Property_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan-to-Value (LTV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>