force-app/main/default/objects/Loan_Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Use only when loan application is rejected</description>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>