force-app/main/default/objects/Loan_Application__c/fields/Selected_Product__c.field-meta.xml
<CustomField>
    <fullName>Selected_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>