force-app/main/default/objects/Loan_Application__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represent the Loan term in no of Months</description>
    <label>Term (Months)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>