force-app/main/default/objects/Loan_Application__c/validationRules/Applicaton_Draft_to_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Applicaton_Draft_to_Submit</fullName>
    <active>true</active>
    <description>Require the transition specifically Draft → Submitted</description>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE(Status__c), &apos;Draft&apos;),
  ISPICKVAL(Status__c, &apos;Submitted&apos;)
)</errorConditionFormula>
    <errorMessage>Loan Application must created at Draft Status.</errorMessage>
</ValidationRule>