force-app/main/default/objects/Loan_Application__c/validationRules/Borrower_Annual_Income_Greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Borrower_Annual_Income_Greater_than_0</fullName>
    <active>false</active>
    <description>Borrower Annual Income &gt; 0</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Submitted&apos;),
  NOT(ISBLANK(Borrower__c)),
  OR(
    ISBLANK(Borrower__r.Annual_Income__c),
    Borrower__r.Annual_Income__c &lt;= 0
  )
)</errorConditionFormula>
    <errorDisplayField>Borrower__c</errorDisplayField>
    <errorMessage>Borrower Annual Income must be greater than 0</errorMessage>
</ValidationRule>