force-app/main/default/objects/Loan_Application__c/validationRules/Borrower_must_have_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Borrower_must_have_Email</fullName>
    <active>false</active>
    <description>Borrower must have Email</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Submitted&apos;),
  NOT(ISBLANK(Borrower__c)),
  ISBLANK(Borrower__r.Email)
)</errorConditionFormula>
    <errorDisplayField>Borrower__c</errorDisplayField>
    <errorMessage>Borrower must have Email address before submitting the Loan Application.</errorMessage>
</ValidationRule>