force-app/main/default/objects/Loan_Application__c/validationRules/Create_In_Draft_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_In_Draft_Only</fullName>
    <active>true</active>
    <description>Require the transition specifically Draft → Submitted</description>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT( ISPICKVAL(Status__c, &quot;Draft&quot;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Loan Application must created at Draft Status.</errorMessage>
</ValidationRule>