force-app/main/default/objects/Loan_Application__c/validationRules/Loan_Amount_Greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Amount_Greater_than_0</fullName>
    <active>false</active>
    <description>Loan Amount &gt; 0</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Submitted&apos;),
  OR(
    ISBLANK(Amount__c),
    Amount__c &lt;= 0
  )
)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Loan Amount must be greater than 9</errorMessage>
</ValidationRule>