force-app/main/default/objects/Loan_Application__c/validationRules/Require_a_Borrower_when_submitting.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_a_Borrower_when_submitting</fullName>
    <active>false</active>
    <description>Require a Borrower when submitting</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Submitted&apos;),
  ISBLANK(Borrower__c)
)</errorConditionFormula>
    <errorDisplayField>Borrower__c</errorDisplayField>
    <errorMessage>Borrower is required when submitting the Loan Application.</errorMessage>
</ValidationRule>