force-app/main/default/objects/Loan_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Borrower__c</columns>
    <columns>Selected_Product__c</columns>
    <columns>Loan_to_Value_LTV__c</columns>
    <columns>Property_Value__c</columns>
    <columns>Status__c</columns>
    <columns>Submission_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>